restructured the files to use launch.json